--- a/ThoiKhoaBieu.html
+++ b/ThoiKhoaBieu.html
@@ -363,16 +363,16 @@
                             <a href="ThoiKhoaBieu.html" title="Thời khóa biểu">Thời Khóa Biểu</a>
                         </li>
                         <li>
-                            <a href="#" title="Lớp học">Lớp Học</a>
+                            <a href="lopHoc.html" title="Lớp học">Lớp Học</a>
                         </li>
                         <li>
-                            <a href="#" title="Điểm">Điểm</a>
+                            <a href="diem.html" title="Điểm">Điểm</a>
                         </li>
                         <li>
-                            <a href="#" title="Điểm (Khoa dược)">Điểm (Khoa Dược)</a>
+                            <a href="diem_khoa_duoc.html" title="Điểm (Khoa dược)">Điểm (Khoa Dược)</a>
                         </li>
                         <li>
-                            <a href="#" title="Lịch thi">Lịch Thi</a>
+                            <a href="lichThi.html" title="Lịch thi">Lịch Thi</a>
                         </li>
                     </ul>
                 </li>
@@ -446,7 +446,6 @@
     <div id="main" role="main">
         <!-- RIBBON -->
         <div id="ribbon">
-
             <span class="ribbon-button-alignment">
                 <span id="refresh" class="btn btn-ribbon" data-action="resetWidgets" data-title="refresh" rel="tooltip"
                     data-placement="bottom"
@@ -461,18 +460,6 @@
                 <li>Thời Khóa Biểu</li>
             </ol>
             <!-- end breadcrumb -->
-
-            <!-- You can also add more buttons to the
-				ribbon for further usability
-
-				Example below:
-
-				<span class="ribbon-button-alignment pull-right">
-				<span id="search" class="btn btn-ribbon hidden-xs" data-title="search"><i class="fa-grid"></i> Change Grid</span>
-				<span id="add" class="btn btn-ribbon hidden-xs" data-title="add"><i class="fa-plus"></i> Add</span>
-				<span id="search" class="btn btn-ribbon" data-title="search"><i class="fa-search"></i> <span class="hidden-mobile">Search</span></span>
-				</span> -->
-
         </div>
         <!-- END RIBBON -->
 
@@ -556,106 +543,21 @@
                                 </tr>
                             </thead>
                             <tbody class="tbody-thu-ngay-thang">
-                                <!-- <tr>
-                                    <th id="thu-ngay-thang" colspan="4"
-                                        class="background-thu-ngay-thang thu-ngay-thang">
-                                        Thứ 2, ngày 20/02/2023</th>
-                                </tr>
-                                <tr id="tbody-content--thong-tin-tiet-hoc" data-toggle="modal" data-target="#myModal">
-                                    <td class="tiet-hoc">2-6</td>
-                                    <td class="ma-mon-hoc">NDF211</td>
-                                    <td class="ten-mon-hoc">Quốc Phòng An Ninh 4</td>
-                                    <td class="thong-tin">Phòng: <strong>E1-12.02</strong> - Lớp:
-                                        <strong>QP4_E1</strong>
-                                    </td>
-                                </tr> -->
                             </tbody>
 
                             <tbody class="tbody-thu-ngay-thang">
-                                <!-- <tr>
-                                    <th colspan="4" class="background-thu-ngay-thang thu-ngay-thang">Thứ 4, ngày
-                                        22/02/2023
-                                    </th>
-                                </tr>
-                                <tr data-toggle="modal" data-target="#myModal">
-                                    <td class="tiet-hoc">7-11</td>
-                                    <td class="ma-mon-hoc">CMP315</td>
-                                    <td class="ten-mon-hoc">Thực hành kỹ thuật lập trình</td>
-                                    <td class="thong-tin">Phòng: <strong>E1-10.03</strong> - Lớp:
-                                        <strong>LT1_E2</strong>
-                                    </td>
-                                </tr> -->
                             </tbody>
 
                             <tbody class="tbody-thu-ngay-thang">
-                                <!-- <tr>
-                                    <th colspan="4" class="background-thu-ngay-thang thu-ngay-thang">Thứ 5, ngày
-                                        23/02/2023
-                                    </th>
-                                </tr>
-                                <tr data-toggle="modal" data-target="#myModal">
-                                    <td class="tiet-hoc">1-3</td>
-                                    <td class="ma-mon-hoc">PHT307</td>
-                                    <td class="ten-mon-hoc">Bóng rổ 1</td>
-                                    <td class="thong-tin">Phòng: <strong>E1-12.03</strong> - Lớp: <strong>BR_E2</strong>
-                                    </td>
-                                </tr>
-                                <tr data-toggle="modal" data-target="#myModal">
-                                    <td class="tiet-hoc">2-6</td>
-                                    <td class="ma-mon-hoc">NDF211</td>
-                                    <td class="ten-mon-hoc">Quốc Phòng An Ninh 4</td>
-                                    <td class="thong-tin">Phòng: <strong>E1-12.02</strong> - Lớp:
-                                        <strong>QP4_E1</strong>
-                                    </td>
-                                </tr> -->
                             </tbody>
 
                             <tbody class="tbody-thu-ngay-thang">
-                                <!-- <tr>
-                                    <th colspan="4" class="background-thu-ngay-thang thu-ngay-thang">Thứ 2, ngày
-                                        20/02/2023
-                                    </th>
-                                </tr>
-                                <tr data-toggle="modal" data-target="#myModal">
-                                    <td class="tiet-hoc">2-6</td>
-                                    <td class="ma-mon-hoc">NDF211</td>
-                                    <td class="ten-mon-hoc">Quốc Phòng An Ninh 4</td>
-                                    <td class="thong-tin">Phòng: <strong>E1-12.02</strong> - Lớp:
-                                        <strong>QP4_E1</strong>
-                                    </td>
-                                </tr> -->
                             </tbody>
 
                             <tbody class="tbody-thu-ngay-thang">
-                                <!-- <tr>
-                                    <th colspan="4" class="background-thu-ngay-thang thu-ngay-thang">Thứ 2, ngày
-                                        20/02/2023
-                                    </th>
-                                </tr>
-                                <tr data-toggle="modal" data-target="#myModal">
-                                    <td class="tiet-hoc">2-6</td>
-                                    <td class="ma-mon-hoc">NDF211</td>
-                                    <td class="ten-mon-hoc">Quốc Phòng An Ninh 4</td>
-                                    <td class="thong-tin">Phòng: <strong>E1-12.02</strong> - Lớp:
-                                        <strong>QP4_E1</strong>
-                                    </td>
-                                </tr> -->
                             </tbody>
 
                             <tbody class="tbody-thu-ngay-thang">
-                                <!-- <tr>
-                                    <th colspan="4" class="background-thu-ngay-thang thu-ngay-thang">Thứ 2, ngày
-                                        20/02/2023
-                                    </th>
-                                </tr>
-                                <tr data-toggle="modal" data-target="#myModal">
-                                    <td class="tiet-hoc">2-6</td>
-                                    <td class="ma-mon-hoc">NDF211</td>
-                                    <td class="ten-mon-hoc">Quốc Phòng An Ninh 4</td>
-                                    <td class="thong-tin">Phòng: <strong>E1-12.02</strong> - Lớp:
-                                        <strong>QP4_E1</strong>
-                                    </td>
-                                </tr> -->
                             </tbody>
                         </table>
                     </div>
@@ -721,7 +623,7 @@
 
     <!-- Tăng/Giảm tháng/năm Thời Khóa Biểu -->
     <script src="/js/tang_giam_thang_tkb.js"></script>
-    <script src="/js/button_thoiGian.js"></script>
+    <script src="/js/xuLyClick.js"></script>
 
     <!-- PACE LOADER - turn this on if you want ajax loading to show (caution: uses lots of memory on iDevices)-->
     <script data-pace-options='{ "restartOnRequestAfter": true }' src="js/plugin/pace/pace.min.js"></script>
